--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@internal/backstage-plugin-postman-backend",
+  "name": "backstage-plugin-postman-backend",
   "version": "0.1.0",
   "main": "src/index.ts",
   "types": "src/index.ts",
