--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "backstage-plugin-postman-backend",
-  "version": "0.1.0",
+  "name": "@aphanor-postman/postman-backstage-backend-plugin",
+  "version": "1.0.0",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
