--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
-  "private": true,
   "publishConfig": {
     "access": "public",
+    "@aphanor-postman:registry": "https://npm.pkg.github.com",
     "main": "dist/index.cjs.js",
     "types": "dist/index.d.ts"
   },
