--- a/packages/postman-backend/package.json
+++ b/packages/postman-backend/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@postman-solutions/postman-backstage-backend-plugin",
-  "version": "1.0.1",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "version": "1.0.3",
+  "main": "dist/index.cjs.js",
+  "types": "dist/index.d.ts",
   "license": "Apache-2.0",
   "publishConfig": {
     "access": "public",
