--- a/packages/postman/package.json
+++ b/packages/postman/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@postman-solutions/backstage-plugin-postman",
-  "version": "1.0.1",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "version": "1.0.3",
+  "main": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
   "license": "Apache-2.0",
   "publishConfig": {
     "access": "public",
@@ -49,7 +49,7 @@
     "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.25.2",
+    "@backstage/cli": "^0.26.4",
     "@backstage/core-app-api": "^1.12.0",
     "@backstage/dev-utils": "^1.0.27",
     "@backstage/test-utils": "^1.5.0",
@@ -59,6 +59,7 @@
     "msw": "^1.0.0"
   },
   "files": [
-    "dist"
+    "dist",
+    "globals.d.ts"
   ]
 }
