--- a/packages/postman-backend/package.json
+++ b/packages/postman-backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@postman-solutions/postman-backstage-backend-plugin",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "main": "dist/index.cjs.js",
   "types": "dist/index.d.ts",
   "license": "Apache-2.0",
@@ -31,25 +31,24 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
-    "@backstage/backend-common": "^0.21.0",
-    "@backstage/backend-plugin-api": "^0.6.12",
-    "@backstage/catalog-model": "^1.4.5",
-    "@backstage/config": "^1.1.1",
-    "@backstage/plugin-catalog-node": "^1.11.1",
-    "@types/express": "*",
-    "axios": "^1.6.7",
+    "@backstage/backend-defaults": "^0.7.0",
+    "@backstage/backend-plugin-api": "^1.1.1",
+    "@backstage/catalog-client": "^1.9.1",
+    "@backstage/catalog-model": "^1.7.3",
+    "@backstage/config": "^1.3.2",
+    "@backstage/errors": "^1.2.7",
+    "@backstage/plugin-catalog-backend": "^1.30.0",
+    "@backstage/plugin-catalog-node": "^1.15.1",
+    "axios": "^1.7.9",
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
-    "graphql": "^16.8.1",
-    "node-fetch": "^2.6.7",
-    "winston": "^3.2.1",
-    "yn": "^4.0.0"
+    "graphql": "^16.10.0",
+    "node-cache": "^5.1.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.25.2",
-    "@types/supertest": "^2.0.12",
-    "msw": "^1.0.0",
-    "supertest": "^6.2.4"
+    "@backstage/cli": "^0.29.5",
+    "@types/express": "^4.17.6"
   },
   "files": [
     "dist"
